fix: enforce plain program name signature in argv0 via shell wrap